# spear-map-paper

./: .gitignore  .gitmodules  LICENSE  README.md  build_all.sh
common/: CMakeLists.txt
eval-align-libs/: CMakeLists.txt  README.md
eval-align-libs/scripts/: plot_accuracy_by_len.py  plot_accuracy_vs_speed.py  plot_offsets.py  plot_scores.py  plot_scores_by_len.py  plot_timing.py  plot_timing_by_len.py  plot_utils.py
eval-align-libs/src/: aligner_edlib.hpp  aligner_ksw2.hpp  aligner_parasail.hpp  aligner_wfa2.hpp  generator.hpp  harness.hpp  main.cpp  mutate.hpp  shatter.hpp  stats.hpp
eval-map/: README.md  Snakefile
eval-map/envs/: mappers.yml  python.yml  snakemake.yaml  utils.yml
eval-map/profiles/: config.yaml
eval-map/profiles/local/: config.yaml
eval-map/scripts/: heatmatrix_wide.py  length_correct_from_bam.py  plot_heatmap.py  summarize_by_length_mapper.py  summarize_flagstats.py
eval-map/tools/generate_fragments/: CMakeLists.txt  main.cpp
